# easyapi-django

./: .gitignore  LICENSE  README.md  build.sh  pyproject.toml  setup.py
easyapi/: __init__.py  base.py  calc.py  calc_resource.py  constants.py  dates.py  exception.py  filters.py  middleware.py  routes.py  util.py
easyapi/orm/: __init__.py
easyapi/tenant/: db_router.py  tenant.py
