[build-system]
requires = [
    "Django>=4.2",
    "pandas",
    "pytz",
    "redis",
    "setuptools>=42",
    "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "easyapi_django"
version = "0.0.32"
authors = [
  { name="Stamatios Stamou Jr", email="bushier.outsets.0c@icloud.com" },
]
description = "A simple rest api generator for django based on models"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/ssjunior/easyapi-django"
"Bug Tracker" = "https://github.com/ssjunior/easyapi-django/issues"
